meja/tests/row-pattern-unexpected-args.stderr
File "tests/row-pattern-unexpected-args.meja", line 3, characters 6-11:
Error: Incompatible types [`A] and [>`A('a)]:
       Cannot unify [`A] and [>`A('a)]:
       the constructor `A has different arities.
